--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </section>
         </main>
         <footer>
-            <p>Site criado por <a href="https://github.com/LuckysS3" target="_blank">Luiz André</a> para o <a href="https://www.cursoemvideo.com" target="_blank">Curso em video</a></p>
+            <p>Site criado por <a href="https://github.com/LuckysS3" target="_blank">Luiz André</a>
         </footer>
     </body>
 </html>
